syntax = "proto3";

option go_package = "github.com/wafi04/golang-backend/grpc/pb";

package pb;

import "google/protobuf/timestamp.proto";

message Order {
    string order_id = 1;     
    int64 quantity = 2;      
    string variants_id = 3;   
    string user_id = 4;    
    double total = 5;  
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
}

message CreateOrderRequest {
    int64 quantity = 1;       
    string variants_id = 2;  
    double total = 3;         
    string user_id = 4;       
}

message CancelOrderRequest {
    string order_id = 1;     
}

message CancelOrderResponse {
    repeated Order orders = 1; 
}

message DeleteOrderRequest {
    string order_id = 1;      
}

message DeleteOrderResponse {
    Order order = 1;          
}

message ErrorResponse {
    string error_code = 1;    
    string message = 2;       
}

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (Order) {}
    rpc CancelOrder (CancelOrderRequest) returns (Order) {}
    rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderResponse) {}
}